# ODA

./: .gitignore  LICENSE  MANIFEST.in  README.md  _config.yml  setup.cfg  setup.cfg~  setup.py  todo.org
_layouts/: default.html
assets/css/: style.css  style.scss
docs/: ODA How It Works.html  ODA How It Works.ipynb  how_to_demo_tools.py  requirements.txt
docs/how_to_demo/: __init__.py~
examples/: batch_process_ct_stacks.py  batch_process_eye_stacks.py  batch_process_images.py  batch_process_stacks.py  batch_stacks.py  oda-preview  stack_preview.py
src/ODA/: __main__.py  __main__.py~  analysis_tools.py  analysis_tools.py~  gui.py  interfaces.py  interfaces.py~  lattice_builder.py  lattice_demo.ipynb  notes.txt  rotation_2d_clustering.py~  test.m
src/ODA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ODA/recovery/: analysis_tools.txt
tests/: 002.memmap  test.py  test.py~  test_CT.py  test_CT.py~  test_all.py  test_layer.py  test_stack.py  test_stack.py~  volume_gui.py
tests/d_mauritiana_ct_stack/: 0136.tif  0140.tif  0144.tif  0148.tif  0152.tif  0156.tif  0160.tif  0164.tif  0168.tif  0172.tif  0176.tif  0180.tif  0184.tif  0188.tif  0192.tif  0196.tif  0200.tif  0204.tif  0208.tif  0212.tif  0216.tif  0220.tif  0224.tif  0228.tif  0232.tif  0236.tif  0240.tif  0244.tif  0248.tif  0252.tif  0256.tif  0260.tif  0264.tif  0268.tif  0272.tif  0276.tif  0280.tif  0284.tif  0288.tif  0292.tif  (+388 more)
tests/d_mauritiana_ct_stack/old_data/: interommatidial_data.csv  interommatidial_data.pkl  ommatidial_data.csv  ommatidial_data.pkl  profiler_stats
