[metadata]
name = ODA
version = 2022.5.24.3
author = John Paul Currea
author_email = johnpaulcurrea@gmail.com
description = Analysis tools for extracting optical parameters of compound eyes from images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jpcurrea/ODA
project_urls =
    Documentation = https://jpcurrea.github.io/ODA/,
    Source = https://github.com/jpcurrea/ODA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
[options.packages.find]
where = src
